2018-10-11  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #86633: Migrate Recordlist hook to TYPO3 9 LTS

2018-10-9  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #86608: Remove support for TYPO3 7 LTS - Thanks to Tomas Norre Mikkelsen
	* Resolves #86609: Remove references to TYPO3_DB object - Thanks to Tomas Norre Mikkelsen

2017-12-19  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #83060: Wrong table name in Configuration/TCA/Overrides/static_countries.php - Thanks to Simon Schaufelberger
	* Update manual
	* Update version to 6.5.1

2017-11-19  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #83033: Adapt suggest options to 8 LTS
	* Resolves #82808: Critical Invalid Cache Bug - Thanks to Tim Lochmüller
	* Update version to 6.5.0

2017-10-16  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #82779: Corrections to official and English names of Swiss cantons - Thanks to Urs Bräm
	* Resolves #80408: Error in composer replace statement

2017-04-11  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Update version to 6.4.3

2017-02-21  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79648: Call to undefined method SJBR\StaticInfoTables\Domain\Model\Country::getAddessFormat()
	* Resolves #79944: Croatia is not marked as EU country
	* Resolves #77144: Table 'typo3.tx_staticinfotables_domain_model_language' doesn't exist

2017-01-24  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Update version to 6.4.2

2017-01-20  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79396: class.tx_staticinfotables_encoding.php, failed to open stream: No such file or directory

2017-01-18  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79384: Issues in TYPO3 CMS 7 after migration to Doctrine
	* Resolves #79385: Update extension icon to svg
	* Update version to 6.4.1

2017-01-17  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79359: Migrate PiBaseApi to Doctrine